objects/SFDC_Plan2User__c.object
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABM Lead</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Customer Advocacy</fullName>
                </value>
                <value>
                    <fullName>Executive Committee</fullName>
                </value>
                <value>
                    <fullName>Global Client Director</fullName>
                </value>
                <value>
                    <fullName>Information Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Products Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Consulting</fullName>
                </value>
                <value>
                    <fullName>Sales Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Services Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>R00N60000001PRPZEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001PRPbEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Link to Team Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Planning Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link to Team Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>